# scheduler

./: Cargo.toml  Dockerfile  Tiltfile  local.k8s.yaml  readme.md
scylla/crd/: cert-manager.yaml
scylla/helm/: values.scylla.yaml
src/: main.rs  worker.rs
src/adapters/: scylla.rs
src/models/: mod.rs  task.rs
src/models/shims/: timestamp.rs
src/procedures/: schema.cql
