[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General Usage
tokio = { version = "1.27", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
derive_more = "0.99"
rand = "0.8"

# HTTP Server
axum = "0.6"
hyper = "0.14"
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
scylla = "0.8"
uuid = { version = "1.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }